# Stat-arb-engine

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
cpp/bench/: bm_arb.cpp
cpp/include/arb/: order_router.hpp  position_manager.hpp  risk_manager.hpp  sim_exchange.hpp  spsc_ring.hpp
cpp/src/arb/: order_router.cpp  position_manager.cpp  risk_manager.cpp  sim_exchange.cpp
python/backtest/: metrics.py  statistical_tests.py  walk_forward.py
python/cointegration/: engle_granger.py  johansen.py  rolling_coint.py
python/data/: binance_client.py  pipeline.py
python/kalman/: hedge_ratio.py
python/regime/: hmm_regime.py
python/strategy/: cost_model.py  position_sizer.py  signal_generator.py
python/viz/: dashboard.py  report_generator.py
tools/: gen_graphs.py
